Ajustes autenticación pero no funciona aún

--- a/src/main/webapp/templates/simpleLayout.xhtml
+++ b/src/main/webapp/templates/simpleLayout.xhtml
@@ -19,7 +19,7 @@
             <p:layoutUnit position="north" size="78" resizable="false" closable="false" collapsible="false"
                           style="padding:1px">
                 <h:panelGrid columns="3" cellpadding="0" style="width:100%; border-spacing: 0">
-                    <img src="#{resource[ 'img:logo.png' ]}" width="220" height="66" alt="Logo ISS"
+                    <img src="#{resource[ 'img:logo.png' ]}" width="92" height="85" alt="Logo DGR"
                          style="margin:0; padding:0"/>
                     <h:panelGroup>
                         <h2><ui:insert name="heading">#{msg.defaultTitle}</ui:insert></h2>
