--- a/src/main/webapp/templates/simpleLayout.xhtml
+++ b/src/main/webapp/templates/simpleLayout.xhtml
@@ -5,7 +5,6 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
       lang="#{localeController.language}">
 
 <f:view locale="#{localeController.locale}" encoding="UTF-8" contentType="text/html">
@@ -13,32 +12,14 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <title><ui:insert name="title">#{msg.defaultTitle}</ui:insert></title>
     </h:head>
-    <h:body>
+    <h:body styleClass="dynWidth">
         <h:outputStylesheet library="css" name="style.css"/>
-        <p:layout fullPage="true">
-            <p:layoutUnit position="north" size="78" resizable="false" closable="false" collapsible="false"
-                          style="padding:1px">
-                <h:panelGrid columns="3" cellpadding="0" style="width:100%; border-spacing: 0">
-                    <img src="#{resource[ 'img:logo.png' ]}" width="92" height="85" alt="Logo DGR"
-                         style="margin:0; padding:0"/>
-                    <h:panelGroup>
-                        <h2><ui:insert name="heading">#{msg.defaultTitle}</ui:insert></h2>
-                    </h:panelGroup>
-                    <h:panelGroup style="float: right;">
-                        <ui:insert name="status"><ui:include src="../templates/tiles/status.xhtml"/></ui:insert>
-                    </h:panelGroup>
-                </h:panelGrid>
-            </p:layoutUnit>
-
-            <p:layoutUnit position="south" size="60" resizable="true" closable="true"
-                          collapsible="true" styleClass="textCenter">
-                <h:outputText value="#{msg.defaultFooterTitle}"/>
-            </p:layoutUnit>
-
-            <p:layoutUnit position="center">
-                <ui:insert name="content">Put default content here, if any.</ui:insert>
-            </p:layoutUnit>
-        </p:layout>
+        <h:outputStylesheet library="css" name="documentos.css"/>
+        <div id="container">
+            <ui:include src="tiles/header.xhtml"/>
+            <ui:insert name="content">Put default content here, if any.</ui:insert>
+            <ui:include src="tiles/footer.xhtml"/>
+        </div>
     </h:body>
 </f:view>
 </html>
