Se agrega Interviniente

--- a/src/main/webapp/templates/tiles/menu.xhtml
+++ b/src/main/webapp/templates/tiles/menu.xhtml
@@ -57,7 +57,7 @@
                     <p:separator/>
 
                     <p:menuitem value="Tipo feeder" action="tipoFeeder" ajax="false"/>
-                    <p:menuitem value="Tipo BTS" action="tipoBTS" ajax="false"/>
+                    <p:menuitem value="Interviniente" action="interviniente" ajax="false"/>
                     <p:menuitem value="Estructura" action="estructuras" ajax="false"/>
                     <p:separator/>
                     <p:menuitem value="Zonas" action="zonas" ajax="false"/>
