--- a/src/main/webapp/templates/tiles/status.xhtml
+++ b/src/main/webapp/templates/tiles/status.xhtml
@@ -32,7 +32,7 @@
                 <h:outputText value="(calificación)"/>
             </ui:fragment>
 
-            <ui:fragment rendered="#{authorizationChecker.isCompletado()}">
+            <ui:fragment rendered="#{authorizationChecker.maestro()}">
                 <h:outputText value="(completado)"/>
             </ui:fragment>
 
