Se cambian ítems menú

--- a/src/main/webapp/templates/tiles/menu.xhtml
+++ b/src/main/webapp/templates/tiles/menu.xhtml
@@ -35,13 +35,11 @@
             </p:submenu>
 
             <p:submenu label="Documentos">
-                <p:menuitem value="Mantenimientos Preventivos" style="font-weight: bold !important"/>
-
                 <p:menuitem value="Ventanilla" action="#{preventivoController.doCreate}"
                             ajax="false"
                             rendered="#{authorizationChecker.admin or authorizationChecker.ventanilla}"/>
-                <p:menuitem value="Consulta general" action="preventivos" ajax="false"/>
-                <p:menuitem value="Consulta últimos preventivos" action="ultimosPreventivos" ajax="false"/>
+                <p:menuitem value="Verificación" action="preventivos" ajax="false"/>
+                <p:menuitem value="Calificar" action="ultimosPreventivos" ajax="false"/>
                 <p:menuitem value="Reporte últimos preventivos" action="reportePreventivos" ajax="false"/>
 
                 <p:separator/>
