Se agrega Completado sin terminar

--- a/src/main/webapp/templates/tiles/menu.xhtml
+++ b/src/main/webapp/templates/tiles/menu.xhtml
@@ -40,7 +40,8 @@
                             rendered="#{authorizationChecker.admin or authorizationChecker.ventanilla}"/>
                 <p:menuitem value="Verificación" action="preventivos" ajax="false"/>
                 <p:menuitem value="Calificar" action="ultimosPreventivos" ajax="false"/>
-                <p:menuitem value="Reporte últimos preventivos" action="reportePreventivos" ajax="false"/>
+                <p:menuitem value="Completar" action="reportePreventivos" ajax="false"/>
+                <p:menuitem value="Completar maestro" action="reportePreventivos" ajax="false"/>
 
                 <p:separator/>
                 <p:menuitem value="Configuración" style="font-weight: bold !important"/>
